--- a/app/views/index/aramasonuclari.html.erb
+++ b/app/views/index/aramasonuclari.html.erb
@@ -93,6 +93,11 @@
 				padding: 50px;
 				background-color:#F0F7F7;
 			}
+			
+			.smartmenus li{
+				
+				z-index:3;
+			}
 		</style>
 
 		</head>
