--- a/app/views/index/hakkimizda.html.erb
+++ b/app/views/index/hakkimizda.html.erb
@@ -196,20 +196,17 @@ body {
 
 				<h2>Biz Kimiz?</h2>
 
-				İki arkadaş ODTÜ'ye özel bir ilan sitesi kurmaya karar verdik ve
+				İki arkadaş üniversite öğrencilerine özel bir ilan sitesi kurmaya karar verdik ve
 				maceramız bu şekilde başladı.<br> <br> İkinci el
 				eşyaların,ders notlarının satılabileceği,özel ders
-				verilebilen,güvenilir bir ev arkadaşı bulunabilen,kiralık ve satılık
-				ev ilanı paylaşılabilen bir platform neden ODTÜ'ye özel olmasın ki?
-				Biz de dedik ki "biz bu işe varız!!". <br> <br> Web
-				yazılımlarına ve kodlamaya olan tutkumuzla yola çıktık. Bu projeyi
-				sizlerin de katkısıyla hep beraber büyütmeye hazırız!! <br> <br>
+				verilebilen,güvenilir bir ev arkadaşı bulunabilen bir platform neden üniversite öğrencilerine özel olmasın ki?<br><br>
+				Biz de dedik ki "biz bu işe varız!!" :) Bu projeyi sizlerin de katkısıyla hep beraber büyütmeye hazırız!! <br> <br>
 				<br>
 
 
 				<p style="text-align: center;">
 					<a href="mailto:onurdemirtas91@gmail.com">Onur</a> &amp; <a
-						href="mailto:">Oğuz</a>
+						href="mailto:oguz.tanrikulu@metu.edu.tr">Oğuz</a>
 				</p>
 
 
