--- a/app/views/application/_kullanicipaneli2.html.erb
+++ b/app/views/application/_kullanicipaneli2.html.erb
@@ -79,7 +79,7 @@
 					<!--  sadece small cihazlarda gözükecek -->
 
 					<div style="padding-left: 50px; margin-top: 50px;"
-					class="row visible-sm visible-md">
+					class="row visible-sm ">
 
 						<div class="row">
 
@@ -122,7 +122,7 @@
 
 							<button style="margin-left: 10px;" type="button"
 							class=" col-sm-2 btn btn-success">
-								<span style="font-size: 10px;">İncelediğim İlanlar</span>
+								<span style="">İncelediklerim</span>
 							</button>
 
 							<button style="margin-left: 10px;" type="button"
