--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -1736,7 +1736,7 @@
 							<label for="email" class="col-md-3 control-label">E-posta</label>
 							<div class="col-md-9">
 								<input type="text" class="form-control" name="email"
-								placeholder="Email Address">
+								placeholder="Email Address" value='<%= current_user.email %>'>
 							</div>
 						</div>
 
