--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -162,6 +162,11 @@
 											Lütfen
 											sadece harf giriniz.
 										</div>
+										<div style="display: none;"
+										class="ol-sm-12 col-xs-12 hidden-lg hidden-md form-group  nameboskalamaz label label-danger">
+											İsim
+											kısmı boş kalamaz.
+										</div>
 
 									</div>
 
@@ -182,10 +187,11 @@
 											sadece harf giriniz.
 										</div>
 										<div style="display: none;"
-										class="col-lg-12 col-md-12 form-group  nameboskalamaz label label-danger">
+										class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  nameboskalamaz label label-danger">
 											İsim
 											kısmı boş kalamaz.
 										</div>
+										
 
 									</div>
 
@@ -198,7 +204,7 @@
 										</div>
 
 										<div style="display: none;"
-										class="col-lg-12 col-md-12 form-group  surnameboskalamaz label label-danger">
+										class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group  surnameboskalamaz label label-danger">
 											Soyad
 											kısmı boş kalamaz.
 										</div>
@@ -413,6 +419,11 @@
 											Bu
 											E-mail adresini kullanabilirsiniz.
 										</div>
+										
+										<div style="display: none;"
+										class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  uniemailerror label label-danger ">
+											Lütfen üniversite E-mail adresinizi giriniz.
+										</div>
 
 									</div>
 
@@ -449,6 +460,13 @@
 											Bu
 											E-mail adresini kullanabilirsiniz.
 										</div>
+										
+										<div style="display: none;"
+										class="col-lg-12 col-md-12 hidden-sm hidden-xs form-group  uniemailerror label label-danger ">
+											Lütfen üniversite E-mail adresinizi giriniz.
+										</div>
+										
+										
 
 									</div>
 
@@ -931,6 +949,7 @@
 									$(".emailvalid").hide();
 									$(".emailkarakterhatasi").hide();
 									$(".emailboskalamaz").show();
+									$(".uniemailerror").hide();
 
 								} else if (!check) {
 
@@ -938,6 +957,7 @@
 									$(".emailvalid").hide();
 									$(".emailboskalamaz").hide();
 									$(".emailkarakterhatasi").show();
+									$(".uniemailerror").hide();
 
 								} else {
 
@@ -959,13 +979,27 @@
 												$(".emailkarakterhatasi").hide();
 												$(".emailvalid").hide();
 												$(".emailerror").show();
+												$(".uniemailerror").hide();
 
-											} else {
+											}
+											
+											else if(!data.unicheck){
+												
+												$(".emailboskalamaz").hide();
+												$(".emailkarakterhatasi").hide();
+												$(".emailvalid").hide();
+												$(".emailerror").hide();
+												$(".uniemailerror").show();
+												
+											}
+											
+											 else {
 
 												$(".emailboskalamaz").hide();
 												$(".emailkarakterhatasi").hide();
 												$(".emailerror").hide();
 												$(".emailvalid").show();
+												$(".uniemailerror").hide();
 												
 												result = true;
 
