--- a/app/views/application/_kullanicipaneli2.html.erb
+++ b/app/views/application/_kullanicipaneli2.html.erb
@@ -76,10 +76,10 @@
 
 					</div>
 
-					<!--  sadece small cihazlarda gözükecek -->
+					<!--  sadece small cihazlarda(small,medium) gözükecek -->
 
 					<div style="padding-left: 50px; margin-top: 50px;"
-					class="row visible-sm ">
+					class="row visible-sm visible-md">
 
 						<div class="row">
 
