--- a/app/views/index/satis-alis.html.erb
+++ b/app/views/index/satis-alis.html.erb
@@ -85,7 +85,10 @@
 
 <style>
 body {
-	padding: 50px;
+	padding-left: 50px;
+				padding-right: 50px;
+				padding-top: 30px;
+				padding-bottom:30px;
 }
 
 .nav-pills>li>a:hover {
