--- a/app/views/index/yardim.html.erb
+++ b/app/views/index/yardim.html.erb
@@ -81,7 +81,10 @@
 
 		<style>
 			body {
-				padding: 50px;
+				padding-left: 50px;
+				padding-right: 50px;
+				padding-top: 30px;
+				padding-bottom:30px;
 			}
 		</style>
 
@@ -188,9 +191,9 @@
 
 				</div>
 
-			</div>
+			
 
-		</div>
+		
 
 		<%= render "footer" %>
 
