--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -7,32 +7,32 @@
 				Paneli</span></a>
 			<ul>
 				<li>
-					<a  class="panellinkler" id="profilim" href='/uye?profilim=1'><span>Profilim</span></a>
+					<a  class="panellinkler" id="profilim" href='/uye/<%= current_user.username%>?profilim=1'><span>Profilim</span></a>
 				</li>
 				<li>
-					<a class="panellinkler" id="ilanver" href='/uye?ilanver=1'><span>İlan Ver</span></a>
+					<a class="panellinkler" id="ilanver" href='/uye/<%= current_user.username%>?ilanver=1'><span>İlan Ver</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="satislarim" href='/satis-alis'><span>Satışlarım</span></a>
+					<a class="panellinkler" id="satislarim" href='/satis-alis/satislarim'><span>Satışlarım</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="alislarim" href='/uye?alislarim=1'><span>Alışlarım</span></a>
+					<a class="panellinkler" id="alislarim" href='/satis-alis/alislarim'><span>Alışlarım</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="favorilerid" href='/uye?favorilerim=1'><span>Favorilerim</span></a>
+					<a class="panellinkler" id="favorilerid" href='/uye/<%= current_user.username%>?favorilerim=1'><span>Favorilerim</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="mesajlarim" href='/uye?mesajlarim=1'><span>Mesajlarım</span></a>
+					<a class="panellinkler" id="mesajlarim" href='/uye/<%= current_user.username%>?mesajlarim=1'><span>Mesajlarım</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="tekliflerim" href='/uye?tekliflerim=1'><span>Tekliflerim</span></a>
+					<a class="panellinkler" id="tekliflerim" href='/uye/<%= current_user.username%>?tekliflerim=1'><span>Tekliflerim</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="inceledigimilanlar" href='/uye?inceledigimilanlar=1'><span>İncelediğim
+					<a class="panellinkler" id="inceledigimilanlar" href='/uye/<%= current_user.username%>?inceledigimilanlar=1'><span>İncelediğim
 						İlanlar</span></a>
 				</li>
 				<li class='last'>
-					<a class="panellinkler" id="hesapayarlariid" href='/uye?hesapayarlari=1'><span>Hesap
+					<a class="panellinkler" id="hesapayarlariid" href='/uye/<%= current_user.username%>?hesapayarlari=1'><span>Hesap
 						Ayarları</span></a>
 				</li>
 			</ul>
@@ -102,10 +102,10 @@
 </div>
 
 <!-- Kullanıcı paneli js kısmı -->
-<% if request.env['PATH_INFO']=="/uye" %>
+<% if request.env['PATH_INFO']=="/uye/" + current_user.username %>
 <script>
 	$(function() {
-
+		$(".degiskenpanel").hide();
 		$(".hesapayarlari").hide();
 		$(".favoriler").hide();
 		$(".tekliflerim").hide();
@@ -120,6 +120,7 @@
 		$("#hesapayarlariid").click(function() {
 
 			$(".panelortak").hide();
+			$(".degiskenpanel").show();
 
 			$(".hesapayarlari").show();
 
@@ -127,27 +128,39 @@
 
 		$("#profilim").click(function() {
 
+			
 			$(".panelortak").hide();
 
 			$(".profilim").show();
+			
+			$(".degiskenpanel").hide();
 
 		})
 
 		$("#favorilerid").click(function() {
 
+			
 			$(".panelortak").hide();
 			$(".favoriler").show();
+			$(".degiskenpanel").hide();
 
 		})
 
 		$("#tekliflerim").click(function() {
 
+			$(".degiskenpanel").show();
 			$(".panelortak").hide();
 			$(".tekliflerim").show();
 
 		})
 		
-		$("<%= @sekme %>").show();
+		$("<%= @sekme %>").show(); 
+		
+		<% if @sekme==".tekliflerim" || @sekme==".hesapayarlari" %>
+		
+		$(".degiskenpanel").show();
+		
+		<% end %>
 		
 	})
 
