--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -112,7 +112,9 @@
 
 			@media screen and (min-width: 1200px) {
 				body {
-					padding: 50px;
+					padding-left: 50px;
+				padding-right: 50px;
+				padding-top:30px;
 				}
 			}
 
