--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -86,7 +86,10 @@
 
 <style>
 body {
-	padding: 50px;
+	padding-left: 50px;
+				padding-right: 50px;
+				padding-top: 30px;
+				padding-bottom:30px;
 	
 }
 
