--- a/app/views/index/reklam.html.erb
+++ b/app/views/index/reklam.html.erb
@@ -120,7 +120,10 @@
 
 <style>
 body {
-	padding: 50px;
+	padding-left: 50px;
+				padding-right: 50px;
+				padding-top: 30px;
+				padding-bottom:30px;
 }
 </style>
 
