--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -67,6 +67,7 @@
 		
 			body {
 				padding: 50px;
+				background-color:#F0F7F7;
 				
 			}
 
@@ -431,7 +432,7 @@
 
 						<div style="">
 
-							<div class="panel panel-info">
+							<div class="panel panel-success">
 
 								<div class="panel-heading">
 									<h3 style="text-align: center;" class="panel-title"><%= @title %></h3>
