--- a/app/views/advert/dersnotu.html.erb
+++ b/app/views/advert/dersnotu.html.erb
@@ -128,9 +128,19 @@
 
 
 <style>
-body {
-	padding: 50px;
-}
+@media screen and (min-width: 1200px) {
+				body {
+					padding-left: 50px;
+				padding-right: 50px;
+				padding-top:30px;
+				}
+			}
+
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
+				}
+			}
 </style>
 
 
