--- a/app/views/index/ilanver.html.erb
+++ b/app/views/index/ilanver.html.erb
@@ -127,13 +127,19 @@
 
 
 <style>
-body {
-	padding-left: 50px;
+@media screen and (min-width: 1200px) {
+				body {
+					padding-left: 50px;
 				padding-right: 50px;
-				padding-top: 30px;
-				padding-bottom:30px;
-	background-color:#F0F7F7;
-}
+				padding-top:30px;
+				}
+			}
+
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
+				}
+			}
 
 
 .sagsutun {
