--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -86,14 +86,17 @@
 				color: black;
 			}
 
-			body {
-				padding: 50px;
+			@media screen and (min-width: 1200px) {
+				body {
+					padding-left: 50px;
+				padding-right: 50px;
+				padding-top:30px;
+				}
 			}
 
-			@media screen and (max-width: 992px) {
-				.termsconditions {
-					margin-left: 5%;
-					margin-right: 5%;
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
 				}
 			}
 		</style>
