--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -54,11 +54,18 @@
 		<!-- end of plugins  -->
 
 		<style>
-			body {
-				padding-left: 50px;
+			@media screen and (min-width: 1200px) {
+				body {
+					padding-left: 50px;
 				padding-right: 50px;
 				padding-top:30px;
-				background-color: #F0F7F7;
+				}
+			}
+
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
+				}
 			}
 
 			.nav-pills > li > a:hover {
