--- a/app/views/index/hakkimizda.html.erb
+++ b/app/views/index/hakkimizda.html.erb
@@ -80,12 +80,18 @@
 		<!-- end of plugins  -->
 
 		<style>
-			body {
-				padding-left: 50px;
+			@media screen and (min-width: 1200px) {
+				body {
+					padding-left: 50px;
 				padding-right: 50px;
-				padding-top: 30px;
-				padding-bottom:30px;
-				background-color: #F0F7F7;
+				padding-top:30px;
+				}
+			}
+
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
+				}
 			}
 		</style>
 
