--- a/app/views/index/satis-alis.html.erb
+++ b/app/views/index/satis-alis.html.erb
@@ -84,12 +84,19 @@
 
 
 <style>
-body {
-	padding-left: 50px;
+@media screen and (min-width: 1200px) {
+				body {
+					padding-left: 50px;
 				padding-right: 50px;
-				padding-top: 30px;
-				padding-bottom:30px;
-}
+				padding-top:30px;
+				}
+			}
+
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
+				}
+			}
 
 .nav-pills>li>a:hover {
 	color: #fff;
