--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -80,11 +80,18 @@
 		<!-- end of plugins  -->
 
 		<style>
-			@media screen and (min-width: 768px) {
+			@media screen and (min-width: 1200px) {
 				body {
-					padding: 50px;
+					padding-left: 50px;
+				padding-right: 50px;
+				padding-top:30px;
 				}
+			}
 
+			@media screen and (max-width: 1200px) {
+				body {
+					padding: 10px;
+				}
 			}
 
 		</style>
