--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -104,16 +104,15 @@
 
 			@media screen and (min-width: 1200px) {
 				body {
-					padding: 50px;
-				}
-				.ustpaneller {
-
+					padding-left: 50px;
+				padding-right: 50px;
+				padding-top:30px;
 				}
 			}
 
-			@media screen and (max-width: 1200px) and (min-width: 768px) {
+			@media screen and (max-width: 1200px) {
 				body {
-					padding: 50px;
+					padding: 10px;
 				}
 			}
 		</style>
