body arka plan rekleri deÛißti

--- a/app/views/index/kullanimkosullari.html.erb
+++ b/app/views/index/kullanimkosullari.html.erb
@@ -120,6 +120,11 @@
 
 
 <style>
+
+body {
+			background-color:#F0F7F7;
+			
+		}
 @media screen and (min-width: 1200px) {
 				body {
 					padding-left: 50px;
