--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -85,6 +85,11 @@
 			.kullanicialert .alert {
 				color: black;
 			}
+			
+			body {
+			background-color:#F0F7F7;
+			
+		}
 
 			@media screen and (min-width: 1200px) {
 				body {
