--- a/app/views/index/reklam.html.erb
+++ b/app/views/index/reklam.html.erb
@@ -119,6 +119,11 @@
 
 
 <style>
+
+body {
+			background-color:#F0F7F7;
+			
+		}
 @media screen and (min-width: 1200px) {
 				body {
 					padding-left: 50px;
