--- a/app/views/index/yardim.html.erb
+++ b/app/views/index/yardim.html.erb
@@ -80,6 +80,11 @@
 		<!-- end of plugins  -->
 
 		<style>
+		
+		body {
+			background-color:#F0F7F7;
+			
+		}
 			@media screen and (min-width: 1200px) {
 				body {
 					padding-left: 50px;
